# usdagent

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  architecture.md
src/usdagent/: __init__.py  api.py  auth.py  drive.py  usd_generator.py
src/usdagent/static/: app.js  index.html  style.css  viewer.html
src/usdagent/templates/: ui.html
tests/: conftest.py  test_api.py  test_auth.py  test_drive.py  test_usd_generator.py
